bppackaging/src/objects/CO_Invoice_Header__c.object
<CustomObject>
    <fields>
        <fullName>AutoNumberHolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AutoNumberHolder</label>
        <referenceTo>AutoNumberHolder__c</referenceTo>
        <relationshipLabel>CO Invoice Headers</relationshipLabel>
        <relationshipName>CO_Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Headers</relationshipLabel>
        <relationshipName>CO_Invoice_Headers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Checkout_Type__c</fullName>
        <label>Checkout Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>AutoNumberHolder__r.Name</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <description>Used for Searching in Home Search</description>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Invoice_Status__c )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <summarizedField>CO_Invoice_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>CO_Invoice_Payment__c.CO_Invoice_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>CO Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CO_Header__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>CO Invoice Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Invoice Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>